Restored to '71b073975f99af0484335a4b800cc60442ed45c3'
