# lib/api-spec/openapi.yaml
@@ -517,11 +517,6 @@ components:
             $ref: "#/components/schemas/ArtifactCard"
         isConnected:
           type: boolean
-        earnedLuminaries:
-          type: array
-          items:
-            type: string
-          description: IDs of luminaries this player has earned
       required:
         - playerId
         - playerName
@@ -532,7 +527,6 @@ components:
         - purchasedCardIds
         - purchasedCards
         - isConnected
-        - earnedLuminaries
 
     GameState:
       type: object
